--- a/ta_management/package.json
+++ b/ta_management/package.json
@@ -1,21 +1,14 @@
 {
-  "name": "majorproject",
+  "name": "ta_management",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@aws-amplify/ui-react": "^4.5.1",
-    "@emotion/react": "^11.10.6",
-    "@emotion/styled": "^11.10.6",
-    "@mui/icons-material": "^5.11.11",
-    "@mui/material": "^5.11.15",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "aws-amplify": "^5.0.24",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "simple-login-form": "^1.1.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -41,9 +34,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "react-router-dom": "^6.10.0",
-    "tailwindcss": "^3.3.1"
   }
 }
