--- a/majorproject/package.json
+++ b/majorproject/package.json
@@ -14,6 +14,7 @@
     "add": "^2.0.6",
     "aws-amplify": "^5.0.24",
     "chart.js": "^4.2.1",
+    "multiselect-react-dropdown": "^2.0.25",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
