--- a/majorproject/package.json
+++ b/majorproject/package.json
@@ -21,6 +21,7 @@
     "react-pro-sidebar": "^1.0.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.7.2",
+    "sweetalert2": "^11.7.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
