--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "react-scripts": "5.0.1",
     "react-select": "^5.7.2",
     "sweetalert2": "^11.7.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "next": "^13.4.2"
+
   },
   "scripts": {
     "start": "react-scripts start",
@@ -51,6 +53,8 @@
   },
   "devDependencies": {
     "react-router-dom": "^6.10.0",
-    "tailwindcss": "^3.3.1"
+    "tailwindcss": "^3.3.1",
+    "react-scripts": "^5.0.1"
+
   }
 }
