--- a/package.json
+++ b/package.json
@@ -27,11 +27,11 @@
 
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build:dev": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "export":"npx next export"
+    "dev": "next",
+    "build:dev": "next build",
+    "start": "next start",
+    "export": "next export"
+
   },
   "eslintConfig": {
     "extends": [
