--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "aws-amplify": "^5.0.24",
     "chart.js": "^4.2.1",
     "multiselect-react-dropdown": "^2.0.25",
+    "next": "^13.4.2",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
@@ -22,16 +23,13 @@
     "react-scripts": "5.0.1",
     "react-select": "^5.7.2",
     "sweetalert2": "^11.7.5",
-    "web-vitals": "^2.1.4",
-    "next": "^13.4.2"
-
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "dev": "next",
-    "build:dev": "next build",
-    "start": "next start",
-    "export": "next export"
-
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
@@ -53,8 +51,7 @@
   },
   "devDependencies": {
     "react-router-dom": "^6.10.0",
-    "tailwindcss": "^3.3.1",
-    "react-scripts": "^5.0.1"
-
+    "react-scripts": "^5.0.1",
+    "tailwindcss": "^3.3.1"
   }
 }
